# jhbuild

./: .cvsignore  .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  ChangeLog  ChangeLog.pre-git  HACKING  MAINTAINERS  Makefile  Makefile.am  Makefile.plain  Makefile.windows  NEWS  README  README.rst  autogen.sh  bootstrap.py  buildscript.py  changecvsroot.py  configure.ac  cvs.py  gettext-changelog.patch  gtk_buildscript.py  gtkinterface.py  httpcache.py  install-check  install-check.c  install-check.sh  interface.py  jamesh.jhbuildrc  jhbuild.desktop  jhbuild.desktop.in  jhbuild.desktop.in.in  jhbuild.doap  jhbuild.glade  jhbuild.in  jhbuild.py  libtool-1.3.5-mktemp.patch  (+15 more)
.gitlab-ci/: Dockerfile  build-docker.sh
aliases/: debian.aliases  debian.aliases.generated
buildbot/: .svnignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  buildbot.tac  master.cfg  template.html
buildbot/jhbuildbot/: __init__.py  factory.py
buildbot/jhbuildbot/status/web/: __init__.py  feeder.py
buildbot/jhbuildbot/test/mail/: svn-commits-list.1  svn-commits-list.2  svn-commits-list.3.comments  svn-commits-list.4  svn-commits-list.5  svn-commits-list.6
buildbot/public_html/: lgo.css
contrib/: jhbuild_completion.bash  update-debian-aliases.py
data/: Makefile.am  debian-sysdeps.py  freebsd-sysdeps.py
doc/: ChangeLog  Makefile.am  command-reference.rst  commands.rst  conf.py  config-reference.rst  custom.xsl  getting-started.rst  getting_started.rst  index.rst  jhbuild-and-gnome.rst  jhbuild.css  jhbuild.omf.in  jhbuild.xml  moduleset-syntax.rst  modulesets.rst
doc/C/: index.docbook  jhbuild.xml
doc/_static/: languageLoader.js
doc/_templates/: languageLoader.js  versions.html
doc/cs/: cs.po
doc/de/: de.po
doc/el/: el.po
doc/es/: es.po
doc/fr/: fr.po
doc/ja/: ja.po
doc/ko/: ko.po
doc/po/: LINGUAS
doc/po/cs/LC_MESSAGES/: docs.po
doc/po/de/LC_MESSAGES/: command-reference.po  config-reference.po  docs.po  getting-started.po  index.po  jhbuild-and-gnome.po  moduleset-syntax.po
doc/po/el/LC_MESSAGES/: docs.po
doc/po/es/LC_MESSAGES/: docs.po
doc/po/fr/LC_MESSAGES/: docs.po
doc/po/ja/LC_MESSAGES/: docs.po
doc/po/ko/LC_MESSAGES/: docs.po
doc/po/pt_BR/LC_MESSAGES/: docs.po
doc/po/ru/LC_MESSAGES/: docs.po
doc/po/sl/LC_MESSAGES/: docs.po
doc/po/sv/LC_MESSAGES/: docs.po
doc/po/zh_CN/LC_MESSAGES/: docs.po
doc/pot/: docs.pot
doc/pt_BR/: pt_BR.po
doc/sl/: sl.po
doc/sv/: sv.po
examples/: Makefile.am  gnome-run-systemd  jhbuild-session  jhbuild-systemd.desktop.in  jhbuild.desktop  jhbuild.desktop.in  sample.jhbuildrc  wayland.jhbuildrc
jhbuild/: Makefile.am  __init__.py  __main__.py  config.py  defaults.jhbuildrc  environment.py  errors.py  main.py  moduleset.py  monkeypatch.py
jhbuild/buildbot/: Makefile.am  __init__.py  changes.py  factory.py  scheduler.py  steps.py
jhbuild/buildbot/status/: Makefile.am
jhbuild/buildbot/status/web/: Makefile.am  __init__.py  bot.py  build.py  builder.py  changes.py  feeder.py  feeds.py  logs.py  step.py  waterfall.py
jhbuild/buildbot/test/: test_mail.py
jhbuild/buildbot/test/mail/: svn-commits-list.3
jhbuild/commands/: Makefile.am  __init__.py  autobuild.py  base.py  bootstrap.py  bot.py  builddeps.py  checkbranches.py  checkmodulesets.py  clean.py  debuild.py  extdeps.py  goalreport.py  gui.py  info.py  make.py  rdepends.py  sanitycheck.py  snapshot.py  sysdeps.py  test.py  tinderbox.py  twoninetynine.py  uninstall.py
jhbuild/cut_n_paste/: Makefile.am  optparse.py
jhbuild/frontends/: Makefile.am  __init__.py  autobuild.py  buildscript.py  gtkui.py  terminal.py  tinderbox.py
jhbuild/modtypes/: Makefile.am  __init__.py  ant.py  archmodule.py  autotools.py  base.py  cmake.py  darcsmodule.py  debian.py  distutils.py  gcjmodule.py  gdbmodule.py  linux.py  mesa.py  meson.py  mozilla.py  mozillamodule.py  perl.py  pip.py  pyproject.py  svnmodule.py  systemmodule.py  tarball.py  testmodule.py  waf.py
jhbuild/sitecustomize/: sitecustomize.py
jhbuild/utils/: Makefile.am  __init__.py  arch.py  cache.py  cmds.py  compat.py  cvs.py  darcs.py  debian.py  fileutils.py  httpcache.py  ldtp.py  lockfile.py  misc.py  notify.py  packagedb.py  subprocess_win32.py  svn.py  sxml.py  sysid.py  systeminstall.py  systempackages.py  trayicon.py  trigger.py  unpack.py  urlutils.py  xvfb.py
jhbuild/versioncontrol/: Makefile.am  __init__.py  arch.py  bzr.py  cvs.py  darcs.py  fossil.py  git.py  hg.py  mtn.py  svn.py  system.py  tarball.py
modulesets/: 0001-3.26-Add-Tweaks-runtime-deps.patch  bootstrap-devel.modules  bootstrap.modules  buildbot.modules  freedesktop-2.16.modules  freedesktop-2.18.modules  freedesktop-2.20.modules  freedesktop-2.22.modules  freedesktop-2.24.modules  freedesktop-2.26.modules  freedesktop-2.28.modules  freedesktop-2.30.modules  freedesktop-3.0.modules  freedesktop-devel.modules  freedesktop.modules  gcj.modules  gnome-2.10.modules  gnome-2.12.modules  gnome-2.14-test.modules  gnome-2.14.modules  gnome-2.16.modules  gnome-2.18.modules  gnome-2.20.modules  gnome-2.22.modules  gnome-2.24.modules  gnome-2.26.modules  gnome-2.28.modules  gnome-2.30.modules  gnome-2.32.modules  gnome-3.0.modules  gnome-apps-3.0.modules  gnome-apps-3.10.modules  gnome-apps-3.12.modules  gnome-apps-3.14.modules  gnome-apps-3.16.modules  gnome-apps-3.18.modules  gnome-apps-3.2.modules  gnome-apps-3.20.modules  gnome-apps-3.22.modules  gnome-apps-3.24.modules  (+110 more)
patches/: WebKit-1.3.7-changeset_r73330.diff  WebKit-1.3.7-changeset_r73603.diff  WebKit-1.3.9-changeset_r75081.diff  WebKit-1.9.6-changeset_125056.diff  WebKit-1.9.6-changeset_125183.diff  gettext-0.17-open.patch  (+78 more)
scripts/: Makefile.am  changecvsroot.py  create-master-tracking-moduleset.sh  create-master-tracking-moduleset.xsl  debian-mkequivs.py  debian-python2-postinstall-hook.sh  gnome-2.6.deps  gnome-2.6.exceptions  hg-update.py  jhbuild.in  mk-tarball-moduleset.py  update-debian-sysdeps.py  update-freebsd-sysdeps.py  upgrade-module-set.xsl
scripts/branch-violations/: README  find-branch-modules  find-branch-moduleset  find-branch-violations
(+115 files in other folders)
