buildbotdir = $(pkgdatadir)/buildbot

buildbot_DATA = \
	master.cfg \
	template.html

buildbothtmldir = $(pkgdatadir)/buildbot/public_html

buildbothtml_DATA = \
	public_html/bar.png \
	public_html/building.png \
	public_html/cyan-bar.png \
	public_html/download.png \
	public_html/emptyimg.png \
	public_html/error.png \
	public_html/feed-atom.png \
	public_html/feed.png \
	public_html/figure.png \
	public_html/foot-16.png \
	public_html/foot.png \
	public_html/general_bg.png \
	public_html/general_separator.png \
	public_html/gnome-16.png \
	public_html/gnome-64.png \
	public_html/gnome-gtp.png \
	public_html/green-bar.png \
	public_html/idle.png \
	public_html/images.jpeg \
	public_html/index.html \
	public_html/info.png \
	public_html/lgo.css \
	public_html/logo.png \
	public_html/nobody.png \
	public_html/offline.png \
	public_html/purple-bar.png \
	public_html/red-bar.png \
	public_html/robot.png \
	public_html/robots.txt \
	public_html/star.png \
	public_html/t.png \
	public_html/tab_left.png \
	public_html/tab_right.png \
	public_html/top-header-gradient.png \
	public_html/warn.png \
	public_html/webpage.png


EXTRA_DIST = \
	AUTHORS \
	$(buildbot_DATA) \
	$(buildbothtml_DATA)

