appdir = $(pythondir)/jhbuild/commands/

app_PYTHON = \
	__init__.py \
	autobuild.py \
	base.py \
	bootstrap.py \
	bot.py \
	checkbranches.py \
	checkmodulesets.py \
	clean.py \
	extdeps.py \
	goalreport.py \
	gui.py \
	info.py \
	make.py \
	rdepends.py \
	sanitycheck.py \
	snapshot.py \
	sysdeps.py \
	tinderbox.py \
	twoninetynine.py \
	uninstall.py

