ICONS = \
	icons/build.png \
	icons/checkout.png \
	icons/configure.png \
	icons/error.png \
	icons/install.png

pkgdata_DATA = $(ICONS)

EXTRA_DIST = $(pkgdata_DATA)

appdir = $(pythondir)/jhbuild/frontends/

app_PYTHON = \
	__init__.py \
	autobuild.py \
	buildscript.py \
	gtkui.py \
	terminal.py \
	tinderbox.py

